--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,46 @@
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-		href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-		rel="stylesheet"
-		/>
-	</head>
-	<body class="bg-darky text-white overflow-hidden font-press-start">
-		<div class="relative">
-			<img class="absolute top-[-10vh] left-[-10rem] h-[120vh] opacity-5" src="/assets/pepega.png" alt="" />
-		</div>
-		<div class="h-[100vh] flex flex-col justify-center items-end pr-20">
-			<h1 class="text-7xl">Hi, I'm <span class="text-orangy">Peter.</span></h1>
-			<p class="mt-8 text-xl text-white/20">(what are you even supposed to write here?)</p>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Peter - My website or sth</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-darky text-white overflow-hidden font-press-start">
+    <div class="relative">
+      <img
+        class="absolute top-[-10vh] left-[-10rem] h-[120vh] opacity-5"
+        src="/assets/pepega.png"
+        alt=""
+      />
+    </div>
+    <div class="h-[100vh] flex flex-col justify-center items-end pr-20">
+      <h1 class="text-7xl opacity-5">
+        <span class="line-through">Pepega</span>.
+      </h1>
+      <h1 class="text-7xl">Hi, I'm <span class="text-orangy">Peter .</span></h1>
+      <p class="mt-8 text-xl text-white/20">
+        (what are you even supposed to write here?)
+      </p>
+      <div class="mt-10 flex gap-6 items-center">
+        <a href="https://github.com/PiotrekPKP" target="_blank"
+          ><button
+            class="px-8 py-4 bg-white/10 border-l-8 border-white/20 hover:bg-white/5 transition-colors"
+            >My GitHub</button
+          >
+        </a>
+        <a href="/sth"
+          ><button
+            class="px-8 py-4 bg-orangy hover:bg-orangy/80 10 border-l-8 border-orange-600 hover:border-orange-400 transition-colors"
+            >Click or sth</button
+          >
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
